--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,9 +21,15 @@ html
     script(src='//cdn.datatables.net/responsive/1.0.1/js/dataTables.responsive.js')
     script(src='//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.js')
     script(src='/javascripts/chart.js')
+    script(async src='https://www.googletagmanager.com/gtag/js?id=UA-116146423-2%22%3E')
     script.
       $(document).ready(function(){
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-116146423-2');
         $('##{active}').addClass('active');
+
         function update_stats(){   
           $.ajax({url: '/ext/summary', success: function(json){
             $("#supply").text(json.data[0].supply);
