--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
     script(src='/vendor/jqplot/plugins/jqplot.barRenderer.min.js')
     script(src='/vendor/jqplot/plugins/jqplot.categoryAxisRenderer.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js')
-    script(src='//cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js')  
+    script(src='//cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js')
     script(src='//cdn.datatables.net/responsive/1.0.1/js/dataTables.responsive.js')
     script(src='//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.js')
     script(src='/javascripts/chart.js')
@@ -29,10 +29,12 @@ html
         gtag('js', new Date());
         gtag('config', 'UA-116146423-2');
         $('##{active}').addClass('active');
-
-        function update_stats(){   
+        function update_stats(){
           $.ajax({url: '/ext/summary', success: function(json){
             $("#supply").text(json.data[0].supply);
+            if (#{settings.masternodes.enabled} === true)
+              $("#circulating").text(json.data[0].circulating);
+
             $("#difficulty").text(json.data[0].difficulty);
             $("#difficultyHybrid").text(json.data[0].difficultyHybrid);
             $("#hashrate").text(json.data[0].hashrate);
@@ -44,15 +46,15 @@ html
         }
         $('.block-last-next').tooltip({
           animation: true,
-          delay: { hide: 500 },   
+          delay: { hide: 500 },
         });
-        $('.history-table').dataTable( {        
+        $('.history-table').dataTable( {
           searching: false,
           ordering: false,
           responsive: true
         });
         $('.iquidus').css('color',$('.table').css('color'));
-        $(window).resize(function () { 
+        $(window).resize(function () {
           $($.fn.dataTable.tables( true ) ).DataTable().columns.adjust();
         });
         setInterval( function() {
@@ -62,7 +64,7 @@ html
       });
   body
     - function format_unixtime(unixtime) {
-      - var a = new Date(unixtime*1000);  
+      - var a = new Date(unixtime*1000);
       - var months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
       - var year = a.getFullYear();
       - var month = months[a.getMonth()];
@@ -83,7 +85,7 @@ html
         - min = '0' + min
       if sec < 10
         - sec = '0' + sec
-      - var time = date + suffix + ' ' + month + ' ' + year + ' ' + hour + ':' + min + ':' + sec ;   
+      - var time = date + suffix + ' ' + month + ' ' + year + ' ' + hour + ':' + min + ':' + sec ;
       - return time
     -  };
     .nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
@@ -94,11 +96,13 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') #{settings.title}
+          a.navbar-brand(href='/')
+            img(src='#{settings.logo}')
+
         .collapse.navbar-collapse(id='navbar-collapse')
           ul.nav.navbar-nav
             li#home
-              a.navbar-link(href='/') 
+              a.navbar-link(href='/')
                 span.glyphicon.glyphicon-search
                 span.menu-text #{settings.locale.menu_explorer}
             if settings.heavy == true
@@ -107,8 +111,8 @@ html
                   span.fa.fa-star
                   span.menu-text #{settings.locale.menu_reward}
             if settings.display.movement == true
-              li#movement 
-                a.navbar-link.loading(href='/movement') 
+              li#movement
+                a.navbar-link.loading(href='/movement')
                   span.fa.fa-money
                   span.menu-text #{settings.locale.menu_movement}
             if settings.display.network == true
@@ -116,6 +120,11 @@ html
                 a.navbar-link(href='/network')
                   span.fa.fa-share-alt
                   span.menu-text #{settings.locale.menu_network}
+            if settings.display.masternodes == true
+              li#network
+                a.navbar-link(href='/masternodes')
+                  span.fa.fa-connectdevelop
+                  span.menu-text #{settings.locale.menu_masternodes}
             if settings.display.richlist == true
               li#richlist
                 a.navbar-link(href='/richlist')
@@ -123,7 +132,7 @@ html
                   span.menu-text #{settings.locale.menu_richlist}
             if settings.display.markets == true
               li#markets
-                a.navbar-link.loading(href='/markets/#{settings.markets.default}') 
+                a.navbar-link.loading(href='/markets/#{settings.markets.default}')
                   span.fa.fa-line-chart
                   span.menu-text #{settings.locale.menu_markets}
             if settings.display.api == true
@@ -150,11 +159,11 @@ html
                 strong #{settings.locale.network} (H/s)
             .panel-body
               if settings.index.difficulty == 'Hybrid'
-               label#hashrate - 
+               label#hashrate -
                <br>
-               label#lblX1  
-              else  
-               label#hashrate - 
+               label#lblX1
+              else
+               label#hashrate -
         .col-md-2
           .panel.panel-default.hidden-sm.hidden-xs
             .panel-heading
@@ -166,19 +175,24 @@ html
                label#difficultyHybrid -
               else
                label#difficulty -
-        .col-md-2.col-sm-12
-          img(src='#{settings.logo}', style='margin-top:-15px;height:128px;')
         .col-md-2
           .panel.panel-default.hidden-sm.hidden-xs
             .panel-heading
               strong #{settings.locale.ex_supply} (#{settings.symbol})
             .panel-body
               if settings.index.difficulty == 'Hybrid'
-               label#supply - 
+               label#supply -
                <br>
                label#lblX1
               else
-               label#supply -  
+               label#supply -
+        if settings.masternodes.collateral
+          .col-md-2
+            .panel.panel-default.hidden-sm.hidden-xs
+              .panel-heading
+                strong #{settings.locale.ex_circulating} (#{settings.symbol})
+              .panel-body
+                label#circulating -
         .col-md-2
           .panel.panel-default.hidden-sm.hidden-xs
             .panel-heading
@@ -189,10 +203,10 @@ html
                <br>
                label#lblX1
               else
-               label#lastPrice - 
-                 
+               label#lastPrice -
+
       .row.text-center(style='margin-top:10px;margin-bottom:20px;')
-        form.form-inline(method='post', action='/search')      
+        form.form-inline(method='post', action='/search')
           #index-search.form-group
             input.form-control(type='text', name='search', placeholder='#{settings.locale.ex_search_message}', style='min-width:80%;margin-right:5px;')
             button.btn.btn-success(type='submit') #{settings.locale.ex_search_button}
@@ -217,11 +231,11 @@ html
       .col-md-4
         ul.nav
           li.text-center(style='margin-left:80px;margin-right:80px;')
-            p(style='margin-top:15px;') 
-              a.navbar-link(href='https://github.com/iquidus/explorer', target='_blank') Powered by Iquidus Explorer 
+            p(style='margin-top:15px;')
+              a.navbar-link(href='https://github.com/iquidus/explorer', target='_blank') Powered by Iquidus Explorer
       span.connections
         label#lblBlockcount.label.label-default -
         label#lblConnections.label.label-default -
 
 
-              
+
